--- a/src/scss/components/_search-form.scss
+++ b/src/scss/components/_search-form.scss
@@ -8,13 +8,17 @@
   .wptoffeedocs-search-label {
     text-align: center;
     margin-bottom: 10px;
-    margin-top: 150px;
+    margin-top: 200px;
     line-height: 56px;
 
+	@media (max-width: 992.98px) {
+		margin-top: 30px !important;
+	}
+
     label {
-      font-size: 3rem;
-      font-weight: 600;
-      color: #333;
+	  font-size: clamp(2rem, 4vw, 3rem);
+      font-weight: 700;
+      color: #000;
     }
 
     p {
